solved overflow issu

--- a/src/component/Contact/Contact.module.css
+++ b/src/component/Contact/Contact.module.css
@@ -59,7 +59,7 @@
   background-color: white;
 }
 .rightPortion {
-  max-width: 1160px;
+  max-width: 1060px;
   width: 100%;
   padding: 40px 10px;
 }
