--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,7 @@
   margin: 0px;
   padding: 0px;
   box-shadow: border-box;
+  overflow: hidden;
 }
 
 @font-face {
